--- a/style.css
+++ b/style.css
@@ -1,3 +1,182 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+body{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+ font-family: 'Roboto', sans-serif,'SerifSans-serif','MonospaceCursive','fantasy';
+ background-color: #968064;
+}
+
+.header{
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+  gap: 200px;
+  background-color: #968064;
+}
+
+.header > div{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+h1{
+  margin-top:40px;
+  font-size: 2.8rem;
+}
+
+.show-form-btn{
+  white-space: nowrap;
+  margin-top: 20px;  font-size: 1.1rem;
+  padding: 0.6rem 3rem;
+  border-radius: 15px;
+}
+
+.grid{
+  display: grid;
+  grid-template-columns: 700px;
+  justify-content: center;
+  gap: 15px;
+}
+
+img{
+  width: 70px;
+  height: auto;
+}
+
+
 .form-container{
-  display: none;
+  transform: scale(0)
+}
+
+.form-container{
+ background: rgba(0, 0, 0, 0.2);
+ 
+ position: fixed;
+ top: 0;
+ left: 0;
+ right: 0;
+ bottom: 0;
+}
+
+form{
+  width: 250px;
+  height: 280px;
+  background-color: #f1eeee;
+
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: center;
+  
+  border-radius: 10px;
+
+  position:fixed;
+  left: 45%;
+  bottom: 45%;
+}
+
+form > input{
+  appearance: none;
+  border: #E5E7EB solid 1px;
+  
+  border-radius: 5px;
+
+  font-size: 1.1rem;
+  padding: 0.3em ;
+  margin-top: 0.8em;
+}
+
+form >input:focus{
+  border:1px solid rgb(112, 112, 231);
+  outline: none;
+  box-shadow: 3px 3px 10px -4px  black;
+}
+
+form >input:focus:invalid{
+  border:1px solid #e71010;  
+}
+.checkbox-container{
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  gap: 10px;
+  margin-top: 0.5em;
+  margin-right: 30px;
+}
+
+label{
+  font-size: 1.1rem;
+}
+
+#read-status{
+  width: 20px;
+  height: 17px;
+}
+
+
+form > button{
+  font-size: 1.2rem;
+  padding: 0.4rem 4rem;
+  margin-top: 0.5em;
+  color: white;
+  border: none;
+  border-radius: 15px;
+}
+.show-form-btn,
+.add-book-btn{
+  background-color: #2e9e57;
+  transition: 0.15s;
+}
+.show-form-btn:hover,
+.add-book-btn:hover{
+  background-color: #2f6342;
+  transition: 0.15s;
+}
+
+.cancel-form-btn{
+  background-color: #b34d4d;
+}
+
+.cancel-form-btn:hover{
+  background-color: #914b4b;
+}
+
+
+button:active{
+  transform: scale(0.86);
+}
+
+
+th{
+  font-size: 2rem;
+}
+
+tr{
+  text-align: center;
+}
+
+ button{
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+tbody{
+  font-size: 1.4rem;
+}
+
+td > button{
+  background-color: #d31414;
+  color: white;
+  border: none;
+  font-size: 1.3rem;
+  padding: 0.4em;
+  border-radius: 7px;
+  transition: 0.2s;
+}
+
+td > button:hover{
+  opacity: 0.6;
 }
